infrastructure/controllers/base/registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
spec:
  ports:
    - port: 5000
  selector:
    app: registry
  type: ClusterIP
